Add Foldseek-TM to HOMSTRAD benchmark

--- a/homstrad_benchmark/benchmark.ipynb
+++ b/homstrad_benchmark/benchmark.ipynb
@@ -269,6 +269,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fab18ee2-2e28-41dd-9af9-0ed2dc1c5e9b",
+   "metadata": {},
+   "source": [
+    "## Foldseek (TM-align mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7d57578-86ae-4ada-b2d3-c61f14b0d5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Di 6. Dez 18:38:23 CET 2022\n",
+      "Di 6. Dez 18:40:40 CET 2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "date\n",
+    "FOLDSEEK=foldseek\n",
+    "\n",
+    "fake_pref() {\n",
+    "    QDB=\"$1\"\n",
+    "    TDB=\"$2\"\n",
+    "    RES=\"$3\"\n",
+    "    \n",
+    "    # create link to data file which contains a list of all targets that should be aligned\n",
+    "    ln -s \"${TDB}.index\" \"${RES}\"\n",
+    "    # create new index repeatedly pointing to same entry\n",
+    "    INDEX_SIZE=\"$(echo $(wc -c < \"${TDB}.index\"))\"\n",
+    "    awk -v size=$INDEX_SIZE '{ print $1\"\\t0\\t\"size; }' \"${QDB}.index\" > \"${RES}.index\"\n",
+    "    # create dbtype (7)\n",
+    "    awk 'BEGIN { printf(\"%c%c%c%c\",7,0,0,0); exit; }' > \"${RES}.dbtype\"\n",
+    "}\n",
+    "\n",
+    "for fam in out/pdbs/*\n",
+    "do\n",
+    "    mkdir -p $fam/foldseektm_tmp\n",
+    "    rm -f $fam/foldseektm_tmp/*\n",
+    "    rm -f out/result.tsv\n",
+    "    rm -f $fam/foldseektm.aln*\n",
+    "    rm -f out/db*\n",
+    "    rm -f out/result*\n",
+    "    \n",
+    "    $FOLDSEEK createdb $fam out/db >> $fam/foldseektm_tmp/foldseek.log\n",
+    "\n",
+    "    rm -f out/fakeprefdb*\n",
+    "    fake_pref out/db out/db out/fakeprefdb\n",
+    "    ln -sf db.index out/fakeprefdb\n",
+    "\n",
+    "    $FOLDSEEK tmalign out/db out/db out/fakeprefdb out/result -a >> $fam/foldseektm_tmp/foldseek.log\n",
+    "    $FOLDSEEK convertalis out/db out/db out/result out/result.tsv --format-output \"query,target,qstart,tstart,qaln,taln,evalue,bits\" >> $fam/foldseektm_tmp/foldseek.log\n",
+    "    awk '{split($1, name1, \".\"); split($2, name2, \".\"); print name1[1], name2[1], $3-1, $4-1, $5, $6}' out/result.tsv > $fam/foldseektm.aln\n",
+    "done\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2bdb08c1-f3f4-49b9-a795-a8f0af6b23a1",
    "metadata": {},
    "source": [
@@ -1128,6 +1193,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de4c47bc-4e2d-4391-a3f8-d2ea25d36efa",
+   "metadata": {},
+   "source": [
+    "### Foldseek (TM-align mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "05ece07e-e845-47ef-bdef-f07fe4735ead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b2da22ab5d948549898f9ee66df6ead",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1032 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.871878945980746, 0.8849067362283265)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_fstm = check_alignments(lambda family: f'out/pdbs/{family}/foldseektm.aln')\n",
+    "stats(res_fstm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd9a35f9-548e-410a-baf5-624bdc86091a",
    "metadata": {},
    "source": [
@@ -1404,8 +1513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "337a14de-35b4-429e-af35-df830c3dcfca",
+   "execution_count": 32,
+   "id": "25545df2-3ebf-4cc0-a4e5-1ea9cf8882a3",
    "metadata": {},
    "outputs": [
     {
@@ -1414,25 +1523,26 @@
      "text": [
       "Name     \tSensitvity\tPrecision\n",
       "----------------------------------------\n",
-      "DALI      \t0.858\t\t0.913\n",
-      "CE        \t0.866\t\t0.897\n",
-      "TMalign   \t0.877\t\t0.890\n",
-      "TMalign-fast\t0.876\t\t0.889\n",
-      "Foldseek  \t0.833\t\t0.868\n",
-      "CLE-SW    \t0.759\t\t0.794\n",
-      "MMseqs2   \t0.325\t\t0.597\n"
+      "DALI            \t0.858\t\t0.913\n",
+      "CE              \t0.866\t\t0.897\n",
+      "TMalign         \t0.877\t\t0.890\n",
+      "TMalign-fast    \t0.876\t\t0.889\n",
+      "Foldseek/TMalign\t0.872\t\t0.885\n",
+      "Foldseek        \t0.831\t\t0.863\n",
+      "CLE-SW          \t0.759\t\t0.794\n",
+      "MMseqs2         \t0.325\t\t0.597\n"
      ]
     }
    ],
    "source": [
-    "tools = [('DALI', res_dali), ('TMalign', res_tm), ('Foldseek', res_fs),  ('TMalign-fast', res_tmfast), \n",
+    "tools = [('DALI', res_dali), ('TMalign', res_tm), ('Foldseek', res_fs), ('Foldseek/TMalign', res_fstm),  ('TMalign-fast', res_tmfast), \n",
     "         ('CE', res_ce), ('CLE-SW', res_cle), ('MMseqs2', res_mmseqs)]\n",
     "print('Name     \\tSensitvity\\tPrecision')\n",
     "print('-' * 40)\n",
     "lines = []\n",
     "for name, res in tools:\n",
     "    found, sens, prec = stats(res)\n",
-    "    lines.append(f'{name:<10}\\t{sens:.3f}\\t\\t{prec:.3f}')\n",
+    "    lines.append(f'{name:<16}\\t{sens:.3f}\\t\\t{prec:.3f}')\n",
     "print('\\n'.join(sorted(lines, key=lambda x: x.split()[2], reverse=True)))"
    ]
   },
@@ -1764,7 +1874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1778,7 +1888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
